[package]
name = "amm-anchor"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm_anchor"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"]}
anchor-spl = "0.31.0"

# crate for calculating amounts of the tokens for lp mint tokens
constant-product-curve = { git = "https://github.com/deanmlittle/constant-product-curve.git" }